feat: add govtech comparatives presentation and hub card

--- a/index.html
+++ b/index.html
@@ -356,6 +356,8 @@
         .project-card:nth-child(1) { animation-delay: 0.1s; }
         .project-card:nth-child(2) { animation-delay: 0.2s; }
         .project-card:nth-child(3) { animation-delay: 0.3s; }
+        .project-card:nth-child(4) { animation-delay: 0.4s; }
+        .project-card:nth-child(5) { animation-delay: 0.5s; }
     </style>
 </head>
 <body>
@@ -474,6 +476,44 @@
                     
                     <div class="project-links">
                         <a href="teardowns/2026-01-28__ogp__pair-search.md" class="btn btn-secondary">Read Teardown</a>
+                    </div>
+                </article>
+
+                <!-- GovTech Equivalents Comparative -->
+                <article class="project-card">
+                    <div class="project-header">
+                        <h2>GovTech Equivalents</h2>
+                        <span class="project-status">Complete</span>
+                    </div>
+
+                    <div class="project-meta">
+                        <span class="tag">Gov Tech</span>
+                        <span class="tag">Comparative</span>
+                        <span class="tag">Global</span>
+                    </div>
+
+                    <p class="project-description">
+                        Comparative landscape of five tier-1 digital government agencies with interview-ready themes and lessons for OGP's portfolio strategy.
+                    </p>
+
+                    <div class="project-stats">
+                        <div class="stat">
+                            <span class="stat-value">5</span>
+                            <span class="stat-label">Countries</span>
+                        </div>
+                        <div class="stat">
+                            <span class="stat-value">5</span>
+                            <span class="stat-label">Themes</span>
+                        </div>
+                        <div class="stat">
+                            <span class="stat-value">Top 3</span>
+                            <span class="stat-label">OGP Rank</span>
+                        </div>
+                    </div>
+
+                    <div class="project-links">
+                        <a href="projects/govtech-comparatives/presentation.html" class="btn btn-primary">View Presentation</a>
+                        <a href="research/interview-prep-govtech-comparatives.md" class="btn btn-secondary">Read Research</a>
                     </div>
                 </article>
                 
