--- a/projects/redeemsg/improvements.html
+++ b/projects/redeemsg/improvements.html
@@ -4,26 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RedeemSG: How We Can Improve It</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;700&family=IBM+Plex+Mono:wght@400;500;600&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=0xProto:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         /* ===========================================
            REDEEMSG IMPROVEMENTS PRESENTATION
-           Focus: Product-centric improvements with clear action items
+           Minimalist white design with 0xProto font
            =========================================== */
         :root {
-            --bg-primary: #0f172a;
-            --bg-gradient-start: #1e293b;
-            --bg-gradient-end: #0f172a;
-            --text-primary: #f8fafc;
-            --text-secondary: #cbd5e1;
-            --text-muted: #64748b;
-            --accent-green: #10b981;
-            --accent-blue: #3b82f6;
-            --accent-purple: #a78bfa;
-            --accent-orange: #f97316;
+            --bg-primary: #ffffff;
+            --bg-secondary: #f9f9f9;
+            --text-primary: #000000;
+            --text-secondary: #333333;
+            --text-muted: #666666;
+            --border-color: #e0e0e0;
+            --accent-dark: #000000;
             
-            --font-display: 'JetBrains Mono', monospace;
-            --font-body: 'IBM Plex Mono', monospace;
+            --font-display: '0xProto', monospace;
+            --font-body: '0xProto', monospace;
             
             --ease-out-expo: cubic-bezier(0.16, 1, 0.3, 1);
             --ease-in-out-cubic: cubic-bezier(0.65, 0, 0.35, 1);
@@ -42,56 +39,10 @@
 
         body {
             font-family: var(--font-body);
-            background: linear-gradient(135deg, var(--bg-gradient-start) 0%, var(--bg-gradient-end) 100%);
+            background: var(--bg-primary);
             color: var(--text-primary);
             overflow-x: hidden;
             position: relative;
-        }
-
-        /* ===========================================
-           ANIMATED GRADIENT ORBS
-           =========================================== */
-        body::before,
-        body::after {
-            content: '';
-            position: fixed;
-            border-radius: 50%;
-            filter: blur(100px);
-            opacity: 0.2;
-            pointer-events: none;
-            z-index: 0;
-        }
-
-        body::before {
-            width: 500px;
-            height: 500px;
-            background: radial-gradient(circle, var(--accent-green) 0%, transparent 70%);
-            top: -150px;
-            right: -150px;
-            animation: float-orb-1 25s ease-in-out infinite;
-        }
-
-        body::after {
-            width: 400px;
-            height: 400px;
-            background: radial-gradient(circle, var(--accent-purple) 0%, transparent 70%);
-            bottom: -100px;
-            left: -100px;
-            animation: float-orb-2 30s ease-in-out infinite;
-        }
-
-        @keyframes float-orb-1 {
-            0%, 100% { transform: translate(0, 0) scale(1); }
-            25% { transform: translate(80px, 120px) scale(1.15); }
-            50% { transform: translate(-50px, 80px) scale(0.9); }
-            75% { transform: translate(40px, -60px) scale(1.05); }
-        }
-
-        @keyframes float-orb-2 {
-            0%, 100% { transform: translate(0, 0) scale(1); }
-            25% { transform: translate(-70px, -100px) scale(1.2); }
-            50% { transform: translate(60px, -50px) scale(0.95); }
-            75% { transform: translate(-40px, 70px) scale(1.1); }
         }
 
         /* ===========================================
@@ -101,8 +52,8 @@
             position: fixed;
             top: 0;
             left: 0;
-            height: 3px;
-            background: var(--accent-green);
+            height: 2px;
+            background: var(--accent-dark);
             width: 0%;
             z-index: 1000;
             transition: width 0.3s ease;
@@ -126,23 +77,23 @@
             width: 8px;
             height: 8px;
             border-radius: 50%;
-            background: var(--text-muted);
+            background: var(--border-color);
             cursor: pointer;
             transition: all 0.3s var(--ease-out-expo);
             border: 2px solid transparent;
-            opacity: 0.5;
+            opacity: 0.6;
         }
 
         .nav-dot:hover {
-            background: var(--text-secondary);
+            background: var(--text-muted);
             transform: scale(1.3);
-            opacity: 0.7;
+            opacity: 1;
         }
 
         .nav-dot.active {
-            background: var(--accent-green);
+            background: var(--accent-dark);
             transform: scale(1.5);
-            box-shadow: 0 0 12px var(--accent-green);
+            box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
             opacity: 1;
         }
 
@@ -176,9 +127,8 @@
         }
 
         h1::before {
-            content: '→ ';
-            color: var(--accent-green);
-            opacity: 0.8;
+            content: '';
+            display: none;
         }
 
         h2 {
@@ -191,10 +141,8 @@
         }
 
         h2::before {
-            content: '// ';
-            color: var(--accent-blue);
-            opacity: 0.6;
-            font-size: 0.8em;
+            content: '';
+            display: none;
         }
 
         h3 {
@@ -202,7 +150,7 @@
             font-size: clamp(1.1rem, 2vw, 1.5rem);
             font-weight: 600;
             margin-bottom: 1rem;
-            color: var(--accent-orange);
+            color: var(--text-primary);
         }
 
         p {
@@ -234,22 +182,22 @@
             color: var(--text-secondary);
             margin-bottom: 3rem;
             padding-left: 2rem;
-            border-left: 3px solid var(--accent-blue);
+            border-left: 2px solid var(--text-muted);
             line-height: 1.6;
         }
 
         .meta {
             font-size: 1rem;
-            font-weight: 600;
+            font-weight: 400;
             display: inline-flex;
             align-items: center;
             gap: 0.75rem;
-            color: var(--accent-orange);
+            color: var(--text-muted);
         }
 
         .meta::before {
             content: '●';
-            color: var(--accent-green);
+            color: var(--text-muted);
             animation: pulse-dot 2s ease-in-out infinite;
         }
 
@@ -269,9 +217,9 @@
         }
 
         .improvement-card {
-            background: rgba(255, 255, 255, 0.03);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 8px;
+            background: var(--bg-secondary);
+            border: 1px solid var(--border-color);
+            border-radius: 4px;
             padding: 2rem;
             display: flex;
             flex-direction: column;
@@ -287,16 +235,17 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 2px;
-            background: linear-gradient(90deg, var(--accent-green), var(--accent-blue), transparent);
+            height: 1px;
+            background: var(--accent-dark);
             opacity: 0;
             transition: opacity 0.3s ease;
         }
 
         .improvement-card:hover {
-            background: rgba(255, 255, 255, 0.05);
-            border-color: rgba(255, 255, 255, 0.15);
-            transform: translateY(-4px);
+            background: var(--bg-primary);
+            border-color: var(--accent-dark);
+            transform: translateY(-2px);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
         }
 
         .improvement-card:hover::before {
@@ -307,7 +256,7 @@
             font-family: var(--font-display);
             font-size: 1.2rem;
             font-weight: 600;
-            color: var(--accent-orange);
+            color: var(--text-primary);
         }
 
         .card-content {
@@ -318,37 +267,37 @@
 
         .card-impact {
             font-size: 0.85rem;
-            color: var(--accent-green);
-            font-weight: 600;
+            color: var(--text-muted);
+            font-weight: 400;
             margin-top: 1rem;
             padding-top: 1rem;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            border-top: 1px solid var(--border-color);
         }
 
         /* ===========================================
            CALLOUT BOXES
            =========================================== */
         .callout {
-            background: rgba(16, 185, 129, 0.1);
-            border-left: 4px solid var(--accent-green);
+            background: var(--bg-secondary);
+            border-left: 3px solid var(--text-muted);
             padding: 1.5rem;
             margin: 2rem 0;
             border-radius: 4px;
         }
 
         .callout.warning {
-            background: rgba(249, 115, 22, 0.1);
-            border-left-color: var(--accent-orange);
+            background: var(--bg-secondary);
+            border-left-color: var(--accent-dark);
         }
 
         .callout.info {
-            background: rgba(59, 130, 246, 0.1);
-            border-left-color: var(--accent-blue);
+            background: var(--bg-secondary);
+            border-left-color: var(--text-muted);
         }
 
         .callout.success {
-            background: rgba(16, 185, 129, 0.1);
-            border-left-color: var(--accent-green);
+            background: var(--bg-secondary);
+            border-left-color: var(--accent-dark);
         }
 
         /* ===========================================
@@ -368,11 +317,11 @@
         }
 
         ul li::before {
-            content: '▸';
+            content: '•';
             position: absolute;
             left: 0;
-            color: var(--accent-green);
-            font-weight: bold;
+            color: var(--text-primary);
+            font-weight: 400;
         }
 
         ol {
@@ -384,8 +333,8 @@
             counter-increment: item;
             position: absolute;
             left: 0;
-            color: var(--accent-orange);
-            font-weight: 600;
+            color: var(--text-primary);
+            font-weight: 400;
             font-family: var(--font-display);
         }
 
@@ -400,9 +349,9 @@
         }
 
         .metric {
-            background: rgba(255, 255, 255, 0.03);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 8px;
+            background: var(--bg-secondary);
+            border: 1px solid var(--border-color);
+            border-radius: 4px;
             padding: 1.5rem;
             display: flex;
             flex-direction: column;
@@ -413,7 +362,7 @@
             font-family: var(--font-display);
             font-size: clamp(1.5rem, 3vw, 2.5rem);
             font-weight: 700;
-            color: var(--accent-green);
+            color: var(--text-primary);
         }
 
         .metric-label {
@@ -444,8 +393,8 @@
             width: 12px;
             height: 12px;
             border-radius: 50%;
-            background: var(--accent-green);
-            box-shadow: 0 0 0 4px rgba(16, 185, 129, 0.2);
+            background: var(--accent-dark);
+            box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1);
         }
 
         .timeline-item::after {
@@ -453,9 +402,9 @@
             position: absolute;
             left: 5px;
             top: 1.5rem;
-            width: 2px;
+            width: 1px;
             height: calc(100% + 1rem);
-            background: rgba(16, 185, 129, 0.2);
+            background: var(--border-color);
         }
 
         .timeline-item:last-child::after {
@@ -493,7 +442,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(0, 0, 0, 0.3);
             display: flex;
             align-items: flex-end;
             justify-content: center;
@@ -519,15 +468,15 @@
         }
 
         .a2hs-modal {
-            background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%);
-            border: 1px solid rgba(16, 185, 129, 0.2);
-            border-radius: 16px;
+            background: var(--bg-primary);
+            border: 1px solid var(--border-color);
+            border-radius: 8px;
             padding: 2rem;
             max-width: 400px;
             width: 90%;
             margin-bottom: 1rem;
             position: relative;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
         }
 
         .a2hs-close {
@@ -536,7 +485,7 @@
             right: 1rem;
             background: none;
             border: none;
-            color: var(--text-secondary);
+            color: var(--text-muted);
             font-size: 1.8rem;
             cursor: pointer;
             padding: 0;
@@ -576,8 +525,8 @@
         }
 
         .a2hs-instructions {
-            background: rgba(16, 185, 129, 0.1);
-            border-left: 3px solid var(--accent-green);
+            background: var(--bg-secondary);
+            border-left: 3px solid var(--text-primary);
             border-radius: 4px;
             padding: 1rem;
             margin: 1.5rem 0;
@@ -594,7 +543,7 @@
             flex: 1;
             padding: 0.75rem 1rem;
             border: none;
-            border-radius: 6px;
+            border-radius: 4px;
             font-family: var(--font-body);
             font-size: 0.9rem;
             font-weight: 600;
@@ -603,23 +552,25 @@
         }
 
         .a2hs-btn.dismiss {
-            background: rgba(255, 255, 255, 0.1);
+            background: var(--bg-secondary);
             color: var(--text-secondary);
+            border: 1px solid var(--border-color);
         }
 
         .a2hs-btn.dismiss:hover {
-            background: rgba(255, 255, 255, 0.15);
+            background: var(--bg-primary);
             color: var(--text-primary);
+            border-color: var(--accent-dark);
         }
 
         .a2hs-btn.primary {
-            background: var(--accent-green);
+            background: var(--accent-dark);
             color: var(--bg-primary);
         }
 
         .a2hs-btn.primary:hover {
-            background: #059669;
-            box-shadow: 0 0 12px rgba(16, 185, 129, 0.5);
+            background: #222222;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
         }
 
         /* ===========================================
@@ -639,11 +590,13 @@
         }
 
         .key {
-            background: rgba(255, 255, 255, 0.1);
+            background: var(--bg-secondary);
             padding: 0.25rem 0.5rem;
-            border-radius: 4px;
+            border-radius: 3px;
+            border: 1px solid var(--border-color);
             font-family: var(--font-display);
             font-size: 0.75rem;
+            color: var(--text-secondary);
         }
 
         /* ===========================================
